# rust-project-template

./: .gitignore  Cargo.toml  README.md
