[package]
name = "rust-project-template"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[dependencies]
